--- a/API/requirements.txt
+++ b/API/requirements.txt
@@ -1,1 +1,26 @@
+bcrypt==5.0.0
+blinker==1.9.0
+click==8.3.0
+Flask==3.1.2
+Flask-Admin==2.0.1
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.7.1
+Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+packaging==25.0
+pillow==12.0.0
+pluggy==1.6.0
 psycopg2-binary==2.9.11
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==9.0.1
+python-dotenv==1.2.1
+qrcode==8.2
+SQLAlchemy==2.0.44
+typing_extensions==4.15.0
+Werkzeug==3.1.3
+WTForms==3.2.1
