--- a/EasyOrderWeb/angular.json
+++ b/EasyOrderWeb/angular.json
@@ -17,6 +17,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "allowedCommonJsDependencies": ["qrcode"],
             "outputPath": "dist/easy-order-web",
             "index": "src/index.html",
             "browser": "src/main.ts",
@@ -42,8 +43,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                  "maximumWarning": "2mb",
+                  "maximumError": "3mb"
                 },
                 {
                   "type": "anyComponentStyle",
