--- a/EasyOrderWeb/package.json
+++ b/EasyOrderWeb/package.json
@@ -10,26 +10,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cdk": "^19.2.19",
-    "@angular/common": "^20.3.14",
-    "@angular/compiler": "^20.3.14",
-    "@angular/core": "^20.3.14",
+    "@angular/animations": "^21.0.1",
+    "@angular/cdk": "^21.0.0",
+    "@angular/common": "^21.0.1",
+    "@angular/compiler": "^21.0.1",
+    "@angular/core": "^21.0.1",
     "@angular/fire": "^20.0.1",
-    "@angular/forms": "^20.3.14",
-    "@angular/material": "^19.2.19",
-    "@angular/platform-browser": "^20.3.14",
-    "@angular/platform-browser-dynamic": "^20.3.14",
-    "@angular/router": "^20.3.14",
+    "@angular/forms": "^21.0.1",
+    "@angular/material": "^21.0.0",
+    "@angular/platform-browser": "^21.0.1",
+    "@angular/platform-browser-dynamic": "^21.0.1",
+    "@angular/router": "^21.0.1",
     "angularx-qrcode": "^21.0.0",
-    "firebase": "^12.6.0",
+    "firebase": "^11.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.3.12",
-    "@angular/cli": "^20.3.12",
-    "@angular/compiler-cli": "^20.3.14",
+    "@angular/build": "^21.0.0",
+    "@angular/cli": "^21.0.0",
+    "@angular/compiler-cli": "^21.0.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
